# gpmg

./: .clang-format  .gitattributes  CMakeLists.txt  LICENSE.md  README.md  contributing.md  naming-conventions.md  run-format.sh
cmake/: FindDoxygen.cmake
docs/: CMakeLists.txt  Doxyfile.in
include/gpmg/: allocators.hpp  misc.hpp  testing.hpp
include/gpmg/allocators/: allocator-traits.hpp  basic-allocator.hpp  basic.hpp  fallback-allocator.hpp  malloc-allocator.hpp  mallocator.hpp  region-allocator.hpp  region.hpp  segregator-allocator.hpp  static-dispatchers.hpp  tools.hpp  utils.hpp
include/gpmg/misc/: assert.hpp  platform.hpp  static-introspection.hpp  types.hpp
test/: CMakeLists.txt  test-allocators.cpp
